# portainer-cli

./: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  release.yml
portainer/: cli.py  libs.py
portainer/commands/: cmd_endpoints-list.py  cmd_stack-create-git.py  cmd_stack-create.py  cmd_stack-delete.py  cmd_stack-list.py  cmd_stack-start.py  cmd_stack-status.py  cmd_stack-stop.py  cmd_volume-create.py  cmd_volume-delete.py  cmd_volume-list.py  cmd_volume-prune.py
portainer/lib/: portainer_api.py  volume.md
