[project]
name = "portainer"
version = "1.1.0"
description = "Portainer Stack for deploying miimetiq"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3",
    "structlog>=25.5.0",
    "requests>=2.32.5",
]

[project.scripts]
portainer = "portainer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portainer"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = false
