[project]
name = "portainer"
version = "2.0.1"
description = "CLI tool for managing Portainer stacks, volumes, and endpoints"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3",
    "structlog>=25.5.0",
    "requests>=2.32.5",
]

[project.scripts]
portainer = "portainer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portainer"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.1"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = false
